--- a/package.json
+++ b/package.json
@@ -40,13 +40,13 @@
     },
     {
       "name": "errorAsString",
-      "title": "Error As String",
+      "title": "Error as String",
       "description": "Error As String Sample",
       "mode": "view"
     },
     {
       "name": "errorAsEnum",
-      "title": "Error As Enum",
+      "title": "Error as Enum",
       "description": "Error As Enum Sample",
       "mode": "view"
     },
@@ -58,13 +58,13 @@
     }
   ],
   "dependencies": {
-    "@raycast/api": "^1.65.1",
+    "@raycast/api": "^1.94.0",
     "@raycast/utils": "^1.10.1"
   },
   "devDependencies": {
     "@raycast/eslint-config": "^1.0.6",
-    "@types/node": "20.8.10",
-    "@types/react": "18.2.27",
+    "@types/node": "^22.13.10",
+    "@types/react": "^19.0.10",
     "eslint": "^8.51.0",
     "prettier": "^3.0.3",
     "typescript": "^5.2.2"
